--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
    
 body {
     font-family: 'Open Sans Condensed';
+    padding: 20px 80px
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
   }
